--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 jinja2==3.1.2
 python-multipart==0.0.6
-pandas==2.2.0
-plotly==5.17.0
-scikit-learn==1.4.0
+pandas>=2.2.3
+plotly>=5.17.0
+scikit-learn>=1.4.0
+numpy>=1.26.0
